--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -39,6 +39,7 @@
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="积分:10000积分"
+                          android:id="@+id/integralTV"
                           android:drawableLeft="@drawable/icon_account_integration"
                           android:drawablePadding="5dp"
                           android:textColor="#ffffff"
@@ -184,8 +185,8 @@
             <TextView android:layout_width="match_parent"
                       android:layout_marginLeft="20dp"
                       android:textSize="16sp"
-                      android:text="登录"
-                      android:id="@+id/loginTV"
+                      android:text="退出登录"
+                      android:id="@+id/unLoginTV"
                       android:layout_marginTop="50dp"
                       android:background="@drawable/ic_bg_account_login"
                       android:gravity="center"
