--- a/app/src/main/res/color/order_query_color_selector.xml
+++ b/app/src/main/res/color/order_query_color_selector.xml
@@ -2,5 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="#0398ff" android:state_checked="true" />
-    <item android:color="#2e2e2e"/>
+    <item android:color="#333333"/>
 </selector>
