--- a/app/src/main/res/drawable/animation_list_refresh_mtwm.xml
+++ b/app/src/main/res/drawable/animation_list_refresh_mtwm.xml
@@ -2,48 +2,43 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
                 android:oneshot="false">
     <item
-        android:drawable="@drawable/wm_common_img_loading_list1"
-        android:duration="100"/>
+            android:drawable="@drawable/a1"
+            android:duration="100"/>
     <item
-        android:drawable="@drawable/wm_common_img_loading_list2"
-        android:duration="90"/>
+            android:drawable="@drawable/a2"
+            android:duration="90"/>
     <item
-        android:drawable="@drawable/wm_common_img_loading_list3"
-        android:duration="80"/>
+            android:drawable="@drawable/a3"
+            android:duration="80"/>
     <item
-        android:drawable="@drawable/wm_common_img_loading_list4"
-        android:duration="70"/>
+            android:drawable="@drawable/a4"
+            android:duration="70"/>
     <item
-        android:drawable="@drawable/wm_common_img_loading_list5"
-        android:duration="70"/>
+            android:drawable="@drawable/a5"
+            android:duration="70"/>
     <item
-        android:drawable="@drawable/wm_common_img_loading_list6"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list7"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list8"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list9"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list10"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list11"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list12"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list13"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list14"
-        android:duration="70"/>
-    <item
-        android:drawable="@drawable/wm_common_img_loading_list15"
-        android:duration="70"/>
+            android:drawable="@drawable/a6"
+            android:duration="70"/>
+
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list9"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list10"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list11"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list12"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list13"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list14"-->
+    <!--android:duration="70"/>-->
+    <!--<item-->
+    <!--android:drawable="@drawable/wm_common_img_loading_list15"-->
+    <!--android:duration="70"/>-->
 </animation-list>
