--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,8 @@
                   android:layout_height="48dp"
                   android:hint="请输入手机号"
                   android:background="@null"
+                  android:text="13280662109"
+                  android:id="@+id/phoneNumberET"
                   android:paddingLeft="10dp"
                   android:textSize="16sp"
                   android:textColorHint="#bfbfbf"
@@ -39,8 +41,10 @@
         <EditText android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:hint="请输入密码"
+                  android:id="@+id/passwordET"
                   android:paddingLeft="10dp"
                   android:background="@null"
+                  android:text="111111"
                   android:textSize="16sp"
                   android:inputType="textPassword"
                   android:textColorHint="#bfbfbf"
@@ -61,6 +65,7 @@
             android:layout_marginLeft="20dp"
             android:text="登录"
             android:textSize="16sp"
+            android:id="@+id/btn1"
             android:textColor="#ffffff"
             android:layout_marginRight="20dp"
             android:background="@drawable/ic_bg_login_button"
