--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -12,6 +12,7 @@
             />
     <ScrollView android:layout_width="match_parent"
                 android:background="#ffffff"
+                android:id="@+id/SV"
                 android:layout_height="match_parent">
         <LinearLayout android:layout_width="match_parent"
                       android:orientation="vertical"
