--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -10,12 +10,14 @@
         <TextView android:layout_width="wrap_content"
                   android:textColor="#333333"
                   android:textSize="16sp"
+                  android:id="@+id/amountTV"
                   android:layout_centerVertical="true"
                   android:text="提现:  100元"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
                   android:textColor="#57b847"
                   android:textSize="16sp"
+                  android:id="@+id/statusTV"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:text="已完成"
@@ -26,6 +28,7 @@
     <TextView android:layout_width="wrap_content"
               android:textColor="#999999"
               android:textSize="14sp"
+              android:id="@+id/timeTV"
               android:layout_marginLeft="20dp"
               android:layout_centerVertical="true"
               android:text="2017-12-12 18:57:09"
