--- a/app/src/main/res/layout/right_dish_item.xml
+++ b/app/src/main/res/layout/right_dish_item.xml
@@ -14,6 +14,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="fitXY"
+                android:id="@+id/pictureIV"
                 android:src="@drawable/zzz"/>
 
         <LinearLayout android:layout_width="match_parent"
