--- a/app/src/main/res/layout/activity_enterprise_main.xml
+++ b/app/src/main/res/layout/activity_enterprise_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:id="@+id/LL"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <RelativeLayout android:layout_width="match_parent"
@@ -50,7 +51,7 @@
                   android:textColor="#bababa"
                   android:textSize="16sp"
                   android:text="@string/choice_area"
-                  android:id="@+id/tv2"
+                  android:id="@+id/cityTV"
                 />
     </RelativeLayout>
 
