--- a/app/src/main/res/layout/fragment_en_product.xml
+++ b/app/src/main/res/layout/fragment_en_product.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:custom="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ListView android:layout_width="match_parent"
-              android:divider="#e1e1e1"
-              android:id="@+id/productLV"
-              android:dividerHeight="1dp"
-              android:layout_height="match_parent">
 
-    </ListView>
+    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
+            android:id="@+id/swipeToLoadLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            custom:swipe_style="classic"
+            >
+
+        <include
+                android:id="@id/swipe_refresh_header"
+                layout="@layout/layout_recommend_header"/>
+        <ListView android:layout_width="match_parent"
+                  android:divider="#e1e1e1"
+                  android:id="@+id/swipe_target"
+                  android:dividerHeight="1dp"
+                  android:layout_height="match_parent">
+
+        </ListView>
+
+
+
+
+        <include
+                android:id="@id/swipe_load_more_footer"
+                layout="@layout/layout_classic_footer" />
+
+    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
 </LinearLayout>
