--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -34,6 +34,7 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/orderAddressTV"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
                               android:text="山东省淄博市张店区"
@@ -48,6 +49,7 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/orderDetailAddressTV"
                               android:layout_marginRight="5dp"
                               android:layout_marginLeft="40dp"
                               android:background="@drawable/ic_bg_order_bottom"
@@ -68,6 +70,7 @@
                               android:gravity="center_vertical"
                               android:layout_marginRight="5dp"
                               android:textColor="#333333"
+                              android:id="@+id/orderSendTimeTV"
                               android:background="@drawable/ic_bg_order_bottom"
                               android:text="上午11:00"
                               android:textSize="14sp"
@@ -85,6 +88,7 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/receiverPhoneTV"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
                               android:text="18753319519"
@@ -103,6 +107,7 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/receiverNameTV"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
                               android:text="张三"
@@ -121,6 +126,7 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/markTV"
                               android:layout_marginRight="5dp"
                               android:text="小心拿放,避免明火"
                               android:textSize="14sp"
@@ -165,6 +171,7 @@
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
                           android:text="使用100积分"
+                          android:id="@+id/useIntegralCountTV"
                           android:textSize="14sp"
                           android:textColor="#333333"/>
 
@@ -204,6 +211,7 @@
                         />
                 <TextView android:layout_width="wrap_content"
                           android:text="已支付,代配送"
+                          android:id="@+id/detailTV"
                           android:textStyle="bold"
                           android:textSize="16sp"
                           android:textColor="#2e2e2e"
