--- a/app/src/main/res/layout/activity_order_settlement.xml
+++ b/app/src/main/res/layout/activity_order_settlement.xml
@@ -37,9 +37,10 @@
                     <TextView android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:id="@+id/gprsTV"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
-                              android:text="山东省淄博市张店区"
+                              android:text=""
                               android:textSize="14sp"
                               android:layout_height="40dp"/>
 
@@ -54,7 +55,8 @@
                               android:layout_marginRight="5dp"
                               android:layout_marginLeft="40dp"
                               android:background="@drawable/ic_bg_order_bottom"
-                              android:text="中润华侨城"
+                              android:text=""
+                              android:hint="请输入详细地址"
                               android:id="@+id/townET"
                               android:textSize="14sp"
                               android:layout_height="40dp"/>
@@ -74,7 +76,8 @@
                               android:textColor="#333333"
                               android:id="@+id/orderSendTimeET"
                               android:background="@drawable/ic_bg_order_bottom"
-                              android:text="上午11:00"
+                              android:text=""
+                              android:hint="请选择配送时间"
                               android:textSize="14sp"
                               android:layout_height="40dp"/>
 
@@ -92,7 +95,9 @@
                               android:textColor="#333333"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
-                              android:text="18753319519"
+                              android:text=""
+                              android:id="@+id/phoneET"
+                              android:hint="请输入您的联系方式"
                               android:textSize="14sp"
                               android:layout_height="40dp"/>
 
@@ -110,7 +115,9 @@
                               android:textColor="#333333"
                               android:layout_marginRight="5dp"
                               android:background="@drawable/ic_bg_order_bottom"
-                              android:text="张三"
+                              android:text=""
+                              android:id="@+id/receiverNameET"
+                              android:hint="请输入收货人姓名"
                               android:textSize="14sp"
                               android:layout_height="40dp"/>
 
@@ -127,7 +134,9 @@
                               android:gravity="center_vertical"
                               android:textColor="#333333"
                               android:layout_marginRight="5dp"
-                              android:text="小心拿放,避免明火"
+                              android:text=""
+                              android:id="@+id/markET"
+                              android:hint="如有需要请单独备注"
                               android:textSize="14sp"
                               android:background="@null"
                               android:layout_height="40dp"/>
@@ -176,7 +185,7 @@
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
-                          android:text="使用100积分"
+                          android:text="使用积分"
                           android:layout_marginLeft="10dp"
                           android:layout_toRightOf="@+id/scoreIV"
                           android:id="@+id/scoreTV"
@@ -343,26 +352,26 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="合计:"
-                android:layout_toLeftOf="@+id/shopping_cart_total_tv"
+                android:layout_toLeftOf="@+id/countTV"
                 android:textColor="#333333"
                 android:textAlignment="center"
                 android:textSize="15sp"
                 />
         <TextView
-                android:id="@+id/shopping_cart_total_tv"
+                android:id="@+id/countTV"
                 android:layout_width="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="1000"
-                android:layout_toLeftOf="@+id/shopping_cart_commit_tv"
+                android:text=""
+                android:layout_toLeftOf="@+id/commitTV"
                 android:textColor="#f78648"
                 android:textAlignment="center"
                 android:textSize="16sp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"/>
         <TextView
-                android:id="@+id/shopping_cart_commit_tv"
+                android:id="@+id/commitTV"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
