--- a/app/src/main/res/layout/fragment_order_type.xml
+++ b/app/src/main/res/layout/fragment_order_type.xml
@@ -4,11 +4,29 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ListView android:layout_width="match_parent"
-              android:id="@+id/orderTypeLV"
-              android:divider="#f2f2f2"
-              android:dividerHeight="5dp"
-              android:layout_height="match_parent">
 
-    </ListView>
+
+    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
+            android:id="@+id/swipeToLoadLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            custom:swipe_style="classic"
+            >
+
+        <include
+                android:id="@id/swipe_refresh_header"
+                layout="@layout/layout_recommend_header"/>
+        <ListView android:layout_width="match_parent"
+                  android:id="@+id/swipe_target"
+                  android:divider="#f2f2f2"
+                  android:dividerHeight="5dp"
+                  android:layout_height="match_parent">
+
+        </ListView>
+
+        <include
+                android:id="@id/swipe_load_more_footer"
+                layout="@layout/layout_classic_footer" />
+
+    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
 </LinearLayout>
