--- a/app/src/main/res/layout/footview_order_query.xml
+++ b/app/src/main/res/layout/footview_order_query.xml
@@ -18,6 +18,7 @@
                   android:layout_height="wrap_content"
                   android:text="订单:100件"
                   android:textSize="15sp"
+                  android:id="@+id/orderNumTV"
                   android:layout_marginRight="20dp"
                   android:textColor="#2c2c2c"
                   android:layout_alignParentRight="true"
@@ -26,6 +27,7 @@
     <TextView android:layout_width="match_parent"
               android:textSize="15sp"
               android:text="金额:2000元"
+              android:id="@+id/orderPriceTV"
               android:layout_marginRight="20dp"
               android:gravity="center_vertical|right"
               android:textColor="#2c2c2c"
