--- a/app/src/main/res/drawable/animation_list_refresh_mtwm.xml
+++ b/app/src/main/res/drawable/animation_list_refresh_mtwm.xml
@@ -2,22 +2,46 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
                 android:oneshot="false">
     <item
-            android:drawable="@drawable/a1"
-            android:duration="100"/>
-    <item
-            android:drawable="@drawable/a2"
-            android:duration="90"/>
-    <item
-            android:drawable="@drawable/a3"
-            android:duration="80"/>
-    <item
-            android:drawable="@drawable/a4"
+            android:drawable="@drawable/b1"
             android:duration="70"/>
     <item
-            android:drawable="@drawable/a5"
+            android:drawable="@drawable/b2"
             android:duration="70"/>
     <item
-            android:drawable="@drawable/a6"
+            android:drawable="@drawable/b3"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b4"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b5"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b6"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b7"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b8"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b9"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b10"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b11"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b12"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b13"
+            android:duration="70"/>
+    <item
+            android:drawable="@drawable/b14"
             android:duration="70"/>
 
     <!--<item-->
