--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -58,7 +58,7 @@
                                       android:text="输入烟花爆竹名称进行搜索"
                                       android:textColor="#76c0f3"
                                       android:drawablePadding="5dp"
-                                      android:drawableLeft="@drawable/ic_product_search_l"
+                                      android:drawableLeft="@drawable/icon_home_search"
                             />
                         </LinearLayout>
 
@@ -81,7 +81,7 @@
                                     android:layout_marginRight="20dp"
                                     android:layout_width="40dp"
                                     android:id="@+id/yanhuaIV"
-                                    android:src="@drawable/icon_home_yanhua"
+                                    android:src="@drawable/icon_loading"
                                     android:layout_height="40dp"
                                     android:scaleType="centerInside"/>
                             <TextView
@@ -109,7 +109,7 @@
                                     android:layout_marginRight="20dp"
                                     android:id="@+id/baozhuIV"
                                     android:layout_width="40dp"
-                                    android:src="@drawable/icon_home_baozhu"
+                                    android:src="@drawable/icon_loading"
                                     android:layout_height="40dp"
                                     android:scaleType="centerInside"/>
                             <TextView
@@ -142,7 +142,7 @@
                                     android:layout_marginLeft="20dp"
                                     android:layout_marginRight="20dp"
                                     android:id="@+id/taocanIV"
-                                    android:src="@drawable/icon_home_taocanlei"
+                                    android:src="@drawable/icon_loading"
                                     android:layout_height="40dp"
                                     android:scaleType="centerInside"/>
                             <TextView
@@ -170,7 +170,7 @@
                                     android:layout_marginRight="20dp"
                                     android:layout_width="40dp"
                                     android:id="@+id/xiaoyanhuaIV"
-                                    android:src="@drawable/icon_home_xiaoyanhua"
+                                    android:src="@drawable/icon_loading"
                                     android:layout_height="40dp"
                                     android:scaleType="centerInside"/>
                             <TextView
@@ -255,7 +255,7 @@
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_centerVertical="true"
-                               android:src="@drawable/ic_nav_search_product"
+                               android:src="@drawable/icon_home_search_w"
                                android:layout_height="40dp"/>
                 </RelativeLayout>
 
