--- a/app/src/main/res/layout/item_enterprise.xml
+++ b/app/src/main/res/layout/item_enterprise.xml
@@ -6,7 +6,7 @@
                 android:paddingBottom="20dp"
                 android:layout_height="wrap_content">
     <ImageView android:layout_width="80dp"
-               android:src="@drawable/zzz"
+               android:src="@drawable/icon_loading"
                android:scaleType="fitXY"
                android:id="@+id/pictureIV"
                android:layout_centerVertical="true"
