--- a/app/src/main/res/layout/item_order_type_content.xml
+++ b/app/src/main/res/layout/item_order_type_content.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="70dp">
     <ImageView android:layout_width="52dp"
-               android:src="@drawable/zzz"
+               android:src="@drawable/icon_loading"
                android:layout_marginLeft="15dp"
                android:id="@+id/pictureIV"
                android:scaleType="centerInside"
