--- a/app/src/main/res/layout/layout_classic_footer.xml
+++ b/app/src/main/res/layout/layout_classic_footer.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
-            android:background="#cccccc"
+            android:background="#00000000"
             android:layout_height="30dp">
 
         <ProgressBar
