--- a/app/src/main/res/layout/layout_recommend_header.xml
+++ b/app/src/main/res/layout/layout_recommend_header.xml
@@ -5,23 +5,60 @@
     android:layout_height="@dimen/refresh_header_height_100"
     >
 
+    <!--<LinearLayout-->
+        <!--android:id="@+id/llRefresh"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_centerInParent="true">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/ivRefresh"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@drawable/animation_list_refresh_mtwm"-->
+            <!--android:scaleX="0.4"-->
+            <!--android:scaleY="0.4"-->
+            <!--android:transformPivotX="75dp"-->
+            <!--android:transformPivotY="30dp"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
     <LinearLayout
-        android:id="@+id/llRefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true">
+            android:id="@+id/llRefresh"
+            android:layout_width="46dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true">
 
         <ImageView
-            android:id="@+id/ivRefresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/animation_list_refresh_mtwm"
-            android:scaleX="0.4"
-            android:scaleY="0.4"
-            android:transformPivotX="75dp"
-            android:transformPivotY="30dp"
-            />
+                android:id="@+id/ivRefresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/animation_list_refresh_mtwm"
+                android:scaleX="0.4"
+                android:scaleY="0.4"
+                android:transformPivotX="0dp"
+                android:transformPivotY="30dp"
+                />
+
     </LinearLayout>
 
+    <ImageView
+            android:id="@+id/ivSpeed"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/llRefresh"
+            android:visibility="visible"/>
+
+
+    <ImageView
+            android:id="@+id/ivBox"
+            android:layout_width="16dp"
+            android:layout_height="12dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="-15dp"
+            android:layout_toRightOf="@id/llRefresh"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
+            android:visibility="visible"/>
 
 </com.htyhbz.yhyg.view.MTWMRefreshHeaderView>
