--- a/app/src/main/res/layout/activity_order_settlement.xml
+++ b/app/src/main/res/layout/activity_order_settlement.xml
@@ -48,10 +48,12 @@
                 <LinearLayout android:layout_width="match_parent"
                               android:orientation="horizontal"
                               android:background="#ffffff"
-                              android:layout_height="40dp">
+                              android:layout_height="wrap_content">
                     <EditText android:layout_width="match_parent"
                               android:gravity="center_vertical"
                               android:textColor="#333333"
+                              android:paddingTop="10dp"
+                              android:paddingBottom="10dp"
                               android:layout_marginRight="5dp"
                               android:layout_marginLeft="40dp"
                               android:background="@drawable/ic_bg_order_bottom"
@@ -59,7 +61,7 @@
                               android:hint="请输入详细地址"
                               android:id="@+id/townET"
                               android:textSize="14sp"
-                              android:layout_height="40dp"/>
+                              android:layout_height="wrap_content"/>
 
                 </LinearLayout>
                 <LinearLayout android:layout_width="match_parent"
@@ -125,7 +127,7 @@
                 <LinearLayout android:layout_width="match_parent"
                               android:orientation="horizontal"
                               android:background="#ffffff"
-                              android:layout_height="40dp">
+                              android:layout_height="wrap_content">
                     <ImageView android:layout_width="40dp"
                                android:src="@drawable/icon_order_message"
                                android:scaleType="centerInside"
@@ -135,11 +137,13 @@
                               android:textColor="#333333"
                               android:layout_marginRight="5dp"
                               android:text=""
+                              android:paddingTop="10dp"
+                              android:paddingBottom="10dp"
                               android:id="@+id/markET"
                               android:hint="如有需要请单独备注"
                               android:textSize="14sp"
                               android:background="@null"
-                              android:layout_height="40dp"/>
+                              android:layout_height="wrap_content"/>
 
                 </LinearLayout>
             </LinearLayout>
