--- a/app/src/main/res/layout/right_dish_item.xml
+++ b/app/src/main/res/layout/right_dish_item.xml
@@ -8,6 +8,9 @@
 
     <LinearLayout android:layout_width="match_parent"
                   android:orientation="horizontal"
+                  android:id="@+id/rightLL"
+                  android:paddingLeft="10dp"
+                  android:paddingRight="10dp"
                   android:gravity="center_vertical"
                   android:layout_height="98.5dp">
         <com.htyhbz.yhyg.view.RoundImageView
