--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             custom:text="登录"
-            />
+    />
     <ImageView android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
@@ -18,37 +18,39 @@
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:layout_gravity="center_horizontal"
-            />
+    />
     <LinearLayout android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:layout_marginRight="20dp"
                   android:layout_marginLeft="20dp"
                   android:background="@drawable/ic_bg_login_edittext"
                   android:layout_height="wrap_content">
-        <EditText android:layout_width="match_parent"
-                  android:layout_height="48dp"
-                  android:hint="请输入手机号"
-                  android:background="@null"
-                  android:text="13280662109"
-                  android:id="@+id/phoneNumberET"
-                  android:paddingLeft="10dp"
-                  android:textSize="16sp"
-                  android:textColorHint="#bfbfbf"
-                />
+        <com.htyhbz.yhyg.view.ClearEditText android:layout_width="match_parent"
+                                            android:layout_height="48dp"
+                                            android:hint="请输入手机号"
+                                            android:paddingRight="10dp"
+                                            android:background="@null"
+                                            android:text="13280662109"
+                                            android:id="@+id/phoneNumberET"
+                                            android:paddingLeft="10dp"
+                                            android:textSize="16sp"
+                                            android:textColorHint="#bfbfbf"
+        />
         <View android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:background="#ececec"/>
-        <EditText android:layout_width="match_parent"
-                  android:layout_height="48dp"
-                  android:hint="请输入密码"
-                  android:id="@+id/passwordET"
-                  android:paddingLeft="10dp"
-                  android:background="@null"
-                  android:text="111111"
-                  android:textSize="16sp"
-                  android:inputType="textPassword"
-                  android:textColorHint="#bfbfbf"
-                />
+        <com.htyhbz.yhyg.view.ClearEditText android:layout_width="match_parent"
+                                            android:layout_height="48dp"
+                                            android:hint="请输入密码"
+                                            android:id="@+id/passwordET"
+                                            android:paddingLeft="10dp"
+                                            android:paddingRight="10dp"
+                                            android:background="@null"
+                                            android:text=""
+                                            android:textSize="16sp"
+                                            android:inputType="textPassword"
+                                            android:textColorHint="#bfbfbf"
+        />
     </LinearLayout>
     <TextView android:layout_width="wrap_content"
               android:textColor="#848484"
@@ -60,7 +62,7 @@
               android:layout_marginBottom="30dp"
               android:layout_marginTop="15dp"
               android:layout_height="wrap_content"
-            />
+    />
     <Button android:layout_width="match_parent"
             android:layout_marginLeft="20dp"
             android:text="登录"
